Fix issues